# ffxiv-materia-calc

./: Cargo.toml  materia.json  report.sh  update.sh
src/: main.rs
