[package]
name = "ffxiv-materia-calc"
version = "0.1.0"
authors = ["kate"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
average = "0.10.2"